# rocm-robot-rl

./: .gitignore  LICENSE  README.md  finalize.py  pipeline_g1_mlp_dr.pkl  pipeline_g1_rough.pkl  pipeline_pusher.pkl  pyproject.toml  requirements-mjx.txt  rocm_setup.py  run_queue.sh.example  train.py  train_ppo.py
configs/: ant_ppo.yaml  g1_rough.yaml
docs/: amd-rocm-gfx1201.md
legacy/: explore.py  main.py  render_sb3.py
src/: config.py  envs.py  runlog.py
src/algorithms/: __init__.py  base.py  ppo.py  ppo_playground.py  simba.py
src/utils/: plot.py  render_mjx.py  render_playground.py
